# Robotic_Lego_Manipulation

./: CMakeLists.txt  README.md  package.xml  record_steps.txt  setup.py
config/: env_setup.json  env_setup_bridge.json  env_setup_bridge_top.json  env_setup_fish.json  env_setup_parallel.json  env_setup_stairs.json  env_setup_stairs_last_one.json  env_setup_stairs_rotated.json  env_setup_stairs_top.json  env_setup_tower.json  mfi_env_setup.json  user_config.json  user_config_A.json  user_config_bridge.json  user_config_bridge_top.json  user_config_stairs_rotated.json  user_config_stairs_top.json  user_config_tower.json
config/assembly_tasks/: AI.json  RI.json  bridge.json  bridge_top.json  chair.json  fish.json  maze.json  stack_1x1.json  stairs.json  stairs_last_one.json  stairs_new.json  stairs_rotated.json  stairs_top.json  test.json  tower.json  wtts.json
config/robot_properties/: FANUC_tool_DH.txt  FANUC_tool_assemble_DH.txt  FANUC_tool_disassemble_DH.txt  gp4_oliver_tool_DH.txt  gp4_oliver_tool_assemble_DH.txt  gp4_oliver_tool_disassemble_DH.txt  gp4_tool_DH.txt  gp4_tool_alt_DH.txt  gp4_tool_alt_assemble_DH.txt  gp4_tool_assemble_DH.txt  gp4_tool_assemble_DH_1.txt  gp4_tool_disassemble_DH.txt  r1_base.txt  r2_base.txt  world_base.txt
include/: Lego.hpp
include/Utils/: Common.hpp  FileIO.hpp  Math.hpp
launch/: dual_arm_lego_manipulation_node.launch  fts_node.launch  lego_manipulation_node.launch  lego_visual_force_feedback_node.launch  realsense_node.launch
src/: Lego.cpp
src/Utils/: FileIO.cpp  Math.cpp
src/py_scripts/: Robot.py  main.py  utils.py
src/ros_nodes/: dual_arm_lego_task_planning_node.cpp  lego_task_planning_node.cpp  lego_task_planning_node_copy.cpp  lego_visual_force_feedback_node.cpp
srv/: GetPose.srv  SetPose.srv
